# ar4Automating3DPrinter

./: .gitignore  3DPrinterAutomation.py  ArucoDetector.py  CMakeLists.txt  RGBD_odometry.py  SLAM.py  aruco_cube_generator.py  aruco_marker_cube.sdf  colorful_objects.sdf  constrainedMovement.py  debug_robot_camera.sh  generateArucoMarkers.py  gripperPoseReader.py  handEyeCalibration.py  installation.sh  launchCalibrationPhysical.sh  launchRobotWithCamera.sh  launchVirtualRobot.sh  launchVirtualRobotWithCamera.sh  launchVisualServoVirtual.sh  multipleScriptLaunch.py  object_generator.py  old_ar4Robot.py  package.xml  poseReader.py  servo.py  set_odometry_pose.py  showVideoFeed.py  simulated3DPrinter.py  spawn_camera.sh  spawn_colorful_objects.sh  spawn_objects_dynamic.sh  testOdometry.py  testVO.py  test_camera_in_world.sh  test_camera_only.sh  test_rotation_math.py  test_spawn_camera.sh  visualServo.py  visual_odometry_ros.py  (+2 more)
env-hooks/: gz_resource_path.dsv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: visualServoNode.py
log/: latest_build
models/: RGB_camera.sdf  RGB_camera_model.sdf  ar4_world_with_sensors.world  empty_world_with_sensors.sdf  gz_simple_camera.sdf  simple_camera.sdf
models/aruco_cube/: model.config  model.sdf
models/aruco_marker/: model.sdf  tmpcilg2tsj.sdf
